force-app/main/default/objects/User_Support__c/User_Support__c.object-meta.xml
<CustomObject>
    <label>User Support</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>