force-app/main/default/objects/User_Support__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <label>Approval</label>
    <length>100</length>
    <type>Text</type>
</CustomField>