force-app/main/default/objects/User_Support__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>Biometrics</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
                <isActive>false</isActive>
                <label>BC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>