force-app/main/default/objects/User_Support__c/fields/Call_Off__c.field-meta.xml
<CustomField>
    <fullName>Call_Off__c</fullName>
    <formula>HYPERLINK($Label.BaseURL&amp;Opportunity__r.Call_Off_Contract__r.Id,Opportunity__r.Call_Off_Contract__r.Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Off</label>
    <type>Text</type>
</CustomField>