force-app/main/default/objects/User_Support__c/fields/Contract_Category__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category__c</fullName>
    <formula>TEXT(Opportunity__r.Contract_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Category</label>
    <type>Text</type>
</CustomField>