force-app/main/default/objects/User_Support__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <formula>HYPERLINK($Label.BaseURL&amp;Opportunity__r.Contract_Lookup__r.Id, Opportunity__r.Contract_Lookup__r.Name &amp; &apos; - &apos; &amp; Opportunity__r.Contract_Lookup__r.Internal_Contract_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Contract</label>
    <type>Text</type>
</CustomField>