force-app/main/default/objects/User_Support__c/fields/Contract_SysId__c.field-meta.xml
<CustomField>
    <fullName>Contract_SysId__c</fullName>
    <formula>Opportunity__r.ContractSysId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract SysId</label>
    <type>Text</type>
</CustomField>