force-app/main/default/objects/User_Support__c/fields/Desired_Actions__c.field-meta.xml
<CustomField>
    <fullName>Desired_Actions__c</fullName>
    <description>For Contract record type</description>
    <label>Desired Actions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>