force-app/main/default/objects/User_Support__c/fields/DK__c.field-meta.xml
<CustomField>
    <fullName>DK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DK</label>
    <type>Checkbox</type>
</CustomField>