force-app/main/default/objects/User_Support__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <label>Documentation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>