force-app/main/default/objects/User_Support__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>