force-app/main/default/objects/User_Support__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File</label>
    <type>Checkbox</type>
</CustomField>