force-app/main/default/objects/User_Support__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>This is the last name of the new user</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>