force-app/main/default/objects/User_Support__c/fields/Link_Jira__c.field-meta.xml
<CustomField>
    <fullName>Link_Jira__c</fullName>
    <description>Link to the Jira page</description>
    <label>Link Jira</label>
    <type>Url</type>
</CustomField>