force-app/main/default/objects/User_Support__c/fields/New_Contract__c.field-meta.xml
<CustomField>
    <fullName>New_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Contract</label>
    <referenceTo>Contract_Archive__c</referenceTo>
    <relationshipLabel>User Support</relationshipLabel>
    <relationshipName>User_Support</relationshipName>
    <type>Lookup</type>
</CustomField>