force-app/main/default/objects/User_Support__c/fields/New_Parent_Agreement__c.field-meta.xml
<CustomField>
    <fullName>New_Parent_Agreement__c</fullName>
    <label>New Parent Agreement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>