force-app/main/default/objects/User_Support__c/fields/NO__c.field-meta.xml
<CustomField>
    <fullName>NO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NO</label>
    <type>Checkbox</type>
</CustomField>