force-app/main/default/objects/User_Support__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contract relates to this opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>User Support</relationshipLabel>
    <relationshipName>User_Support</relationshipName>
    <type>Lookup</type>
</CustomField>