force-app/main/default/objects/User_Support__c/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>HYPERLINK($Label.BaseURL&amp;Opportunity__r.Id,Opportunity__r.Name&amp;&quot; - &quot;&amp;Opportunity__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>