force-app/main/default/objects/User_Support__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_request__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>A - Critical (system not working)</fullName>
                <isActive>false</isActive>
                <label>A - Critical (system not working)</label>
            </value>
            <value>
                <fullName>B - Serious (important parts of the system not working)</fullName>
                <isActive>false</isActive>
                <label>B - Serious (important parts of the system not working)</label>
            </value>
            <value>
                <fullName>C - Less serious (should be fixed, but not urgent)</fullName>
                <isActive>false</isActive>
                <label>C - Less serious (should be fixed, but not urgent)</label>
            </value>
            <value>
                <fullName>D - Cosmetics (will be fixed when available time)</fullName>
                <isActive>false</isActive>
                <label>D - Cosmetics (will be fixed when available time)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>