force-app/main/default/objects/User_Support__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Waiting feedback</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Closed - Implemented</fullName>
                <isActive>false</isActive>
                <label>Closed - Implemented</label>
            </value>
            <value>
                <fullName>Deployed</fullName>
                <isActive>false</isActive>
                <label>Deployed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>