force-app/main/default/objects/User_Support__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This is the subject field for the flow</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>