force-app/main/default/objects/User_Support__c/fields/Subject_for_ListView__c.field-meta.xml
<CustomField>
    <fullName>Subject_for_ListView__c</fullName>
    <formula>IF(OR( RecordType.Name = &apos;User Provisioning&apos;, RecordType.Name = &apos;User Deactivation&apos;),
			RecordType.Name &amp; &apos; &apos; &amp;  First_Name__c  &amp; &apos; &apos; &amp;  Last_Name__c &amp;  User_to_be_deactivated__r.FirstName &amp; &apos; &apos; &amp; User_to_be_deactivated__r.LastName ,
			 Subject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject for ListView</label>
    <type>Text</type>
</CustomField>