force-app/main/default/objects/User_Support__c/fields/Type_of_request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_request__c</fullName>
    <label>Type of request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improvements</fullName>
                <label>Improvement / Change request</label>
            </value>
            <value>
                <fullName>Bug / Problems</fullName>
            </value>
            <value>
                <fullName>Help &amp; Guidance</fullName>
            </value>
            <value>
                <fullName>User Provisioning</fullName>
            </value>
            <value>
                <fullName>User deactivation</fullName>
                <label>User Deactivation</label>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Bug or Problems</fullName>
                <isActive>false</isActive>
                <label>Bug or Problems</label>
            </value>
            <value>
                <fullName>Change request</fullName>
                <isActive>false</isActive>
                <label>Change request</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <isActive>false</isActive>
                <label>Error</label>
            </value>
            <value>
                <fullName>Lead Process Feedback</fullName>
                <isActive>false</isActive>
                <label>Lead Process Feedback</label>
            </value>
            <value>
                <fullName>Performance Issue</fullName>
                <isActive>false</isActive>
                <label>Performance Issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>