force-app/main/default/objects/User_Support__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>This is the field for username which the users need to log into it</description>
    <label>Username</label>
    <type>Email</type>
</CustomField>