force-app/main/default/objects/User_Support__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>This is for Bugs that will be reported from User Support</description>
    <label>Bug</label>
</RecordType>