force-app/main/default/objects/User_Support__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>Problem with contracts archive</description>
    <label>Contract</label>
</RecordType>