force-app/main/default/objects/User_Support__c/recordTypes/Help_Guidance.recordType-meta.xml
<RecordType>
    <fullName>Help_Guidance</fullName>
    <active>true</active>
    <description>This record type is for Help and Guidance</description>
    <label>Help &amp; Guidance</label>
</RecordType>