force-app/main/default/objects/User_Support__c/recordTypes/User_Deactivation.recordType-meta.xml
<RecordType>
    <fullName>User_Deactivation</fullName>
    <active>true</active>
    <label>User Deactivation</label>
</RecordType>