force-app/main/default/objects/User_Support__c/recordTypes/User_Provisioning.recordType-meta.xml
<RecordType>
    <fullName>User_Provisioning</fullName>
    <active>true</active>
    <label>User Provisioning</label>
</RecordType>