force-app/main/default/objects/User_Support__c/recordTypes/User_Support.recordType-meta.xml
<RecordType>
    <fullName>User_Support</fullName>
    <active>true</active>
    <label>User Support</label>
</RecordType>