force-app/main/default/objects/User_Support__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_of_request__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Closed__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>