force-app/main/default/objects/User_Support__c/listViews/All_closed.listView-meta.xml
<ListView>
    <fullName>All_closed</fullName>
    <columns>NAME</columns>
    <columns>Type_of_request__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <label>Closed support cases</label>
    <sharedTo>
        <group>Admins_and_Super_Users</group>
    </sharedTo>
</ListView>