force-app/main/default/objects/User_Support__c/listViews/Bug_User_Support.listView-meta.xml
<ListView>
    <fullName>Bug_User_Support</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Country__c</columns>
    <columns>Object_Picklist__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_request__c</field>
        <operation>equals</operation>
        <value>Bug / Problems</value>
    </filters>
    <label>Bug / Problems</label>
    <sharedTo>
        <group>Admins_and_Super_Users</group>
    </sharedTo>
</ListView>