force-app/main/default/objects/User_Support__c/listViews/Contract_Archive_Support.listView-meta.xml
<ListView>
    <fullName>Contract_Archive_Support</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Type_of_request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In progress,Waiting feedback</value>
    </filters>
    <filters>
        <field>Type_of_request__c</field>
        <operation>equals</operation>
        <value>Contract</value>
    </filters>
    <label>Contract Archive Support</label>
</ListView>