force-app/main/default/objects/User_Support__c/listViews/Contract_Problem_User_Support.listView-meta.xml
<ListView>
    <fullName>Contract_Problem_User_Support</fullName>
    <filterScope>Queue</filterScope>
    <label>Contract Problem</label>
    <queue>Contract_Problem</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>