force-app/main/default/objects/User_Support__c/listViews/Deployed_not_closed.listView-meta.xml
<ListView>
    <fullName>Deployed_not_closed</fullName>
    <columns>NAME</columns>
    <columns>Type_of_request__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </filters>
    <label>Deployed, not closed</label>
    <sharedTo>
        <group>Admins_and_Super_Users</group>
    </sharedTo>
</ListView>