force-app/main/default/objects/User_Support__c/listViews/Help_Guidance_User_Support.listView-meta.xml
<ListView>
    <fullName>Help_Guidance_User_Support</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Object_Picklist__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_request__c</field>
        <operation>equals</operation>
        <value>Help &amp; Guidance</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Done</value>
    </filters>
    <label>Help &amp; Guidance</label>
    <sharedTo>
        <group>Admins_and_Super_Users</group>
    </sharedTo>
</ListView>