force-app/main/default/objects/User_Support__c/listViews/My_support_cases.listView-meta.xml
<ListView>
    <fullName>My_support_cases</fullName>
    <columns>NAME</columns>
    <columns>Type_of_request__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My support cases</label>
</ListView>