force-app/main/default/objects/User_Support__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Subject_for_ListView__c</columns>
    <columns>Type_of_request__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Business_Unit__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In progress,Deployed</value>
    </filters>
    <label>Open Support Cases</label>
    <sharedTo>
        <group>Admins_and_Super_Users</group>
    </sharedTo>
</ListView>