force-app/main/default/objects/User_Support__c/listViews/Open_Cases.listView-meta.xml
<ListView>
    <fullName>Open_Cases</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Business_Unit__c</columns>
    <columns>Country__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Done</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>Open Cases</label>
    <sharedTo>
        <group>Admins_and_Super_Users</group>
    </sharedTo>
</ListView>