force-app/main/default/objects/User_Support__c/listViews/Open_support_cases.listView-meta.xml
<ListView>
    <fullName>Open_support_cases</fullName>
    <columns>NAME</columns>
    <columns>Type_of_request__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In progress,Deployed</value>
    </filters>
    <label>Open support cases - detail</label>
</ListView>