force-app/main/default/objects/User_Support__c/listViews/Recently_Closed_support_cases.listView-meta.xml
<ListView>
    <fullName>Recently_Closed_support_cases</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deployed,Closed - Implemented</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Type_of_request__c</field>
        <operation>equals</operation>
        <value>Change request</value>
    </filters>
    <label>Recent Changes</label>
</ListView>