force-app/main/default/objects/User_Support__c/listViews/User_Activation_Deactivation_User_Support.listView-meta.xml
<ListView>
    <fullName>User_Activation_Deactivation_User_Support</fullName>
    <filterScope>Queue</filterScope>
    <label>User Activation / Deactivation</label>
    <queue>User_Activation_Deactivation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>